--- a/src/share-button.styl
+++ b/src/share-button.styl
@@ -1,4 +1,4 @@
-@import url('//fonts.googleapis.com/css?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=Lato');
 
 network($amt)
   $width = ($amt * 60)px
@@ -177,7 +177,7 @@ share-button
 
           &:after
             opacity: .5
-      
+
         &:before, &:after
           background-repeat: no-repeat !important
 
